--- a/html/A la française.html
+++ b/html/A la française.html
@@ -28,120 +28,125 @@
                             <i class="fa-solid fa-heart plein"></i>
                         </div>
                     </div>
-                    <div id="entrees">
+                    <div>
                         <h2 class="repas">entrées</h2>
-                        <div class="assiette assiette_1">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Tartare de poulpe acidulé</h3>
-                                    <p>Aux zestes d'orange</p>
+                        <div class="plats">
+                            <div class="assiette assiette_1">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Tartare de poulpe acidulé</h3>
+                                        <p>Aux zestes d'orange</p>
+                                    </div>
+                                    <p class="prix">25€</p>
                                 </div>
-                                <p class="prix">25€</p>
-                            </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
-                            </div>
-                        </div>
-                        <div class="assiette assiette_2">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Velouté de légumes d'antan</h3>
-                                    <p>Carotte, panais, topinambour</p>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
                                 </div>
-                                <p class="prix">35€</p>
                             </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
-                            </div>
-                        </div>
-                        <div class="assiette assiette_3">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Soupe à l'oignon</h3>
-                                    <p>Revisitée</p>
+                            <div class="assiette assiette_2">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Velouté de légumes d'antan</h3>
+                                        <p>Carotte, panais, topinambour</p>
+                                    </div>
+                                    <p class="prix">35€</p>
                                 </div>
-                                <p class="prix">20€</p>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
+                                </div>
                             </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
+                            <div class="assiette assiette_3">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Soupe à l'oignon</h3>
+                                        <p>Revisitée</p>
+                                    </div>
+                                    <p class="prix">20€</p>
+                                </div>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
+                                </div>
                             </div>
-                        </div>
                     </div>
-                    <div id="plats">
+                    <div>
                         <h2 class="repas">plats</h2>
-                        <div class="assiette assiette_1">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Coquilles Saint-Jacques</h3>
-                                    <p>Accompagnées d'une purée de panais</p>
+                        <div class="plats">
+                            <div class="assiette assiette_1">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Coquilles Saint-Jacques</h3>
+                                        <p>Accompagnées d'une purée de panais</p>
+                                    </div>
+                                    <p class="prix">40€</p>
                                 </div>
-                                <p class="prix">40€</p>
-                            </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
-                            </div>
-                        </div>
-                        <div class="assiette assiette_2">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Magret de canard</h3>
-                                    <p>Et parmentier de pommes de terre</p>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
                                 </div>
-                                <p class="prix">35€</p>
                             </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
-                            </div>
-                        </div>
-                        <div class="assiette assiette_3">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Pigeonneau d’Ille-et-Vilaine</h3>
-                                    <p>Sur son lit de gnocchis aux légumes</p>
+                            <div class="assiette assiette_2">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Magret de canard</h3>
+                                        <p>Et parmentier de pommes de terre</p>
+                                    </div>
+                                    <p class="prix">35€</p>
                                 </div>
-                                <p class="prix">44€</p>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
+                                </div>
                             </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
+                            <div class="assiette assiette_3">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                                        <p>Sur son lit de gnocchis aux légumes</p>
+                                    </div>
+                                    <p class="prix">44€</p>
+                                </div>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div id="desserts">
+                    <div>
                         <h2 class="repas">desserts</h2>
-                        <div class="assiette assiette_1">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Pétales de violettes glacés</h3>
-                                    <p>Et purée de noisettes</p>
+                        <div class="plats">
+                            <div class="assiette assiette_1">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Pétales de violettes glacés</h3>
+                                        <p>Et purée de noisettes</p>
+                                    </div>
+                                    <p class="prix">18€</p>
                                 </div>
-                                <p class="prix">18€</p>
-                            </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
-                            </div>
-                        </div>
-                        <div class="assiette assiette_2">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Fondant au chocolat</h3>
-                                    <p>Revisité</p>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
                                 </div>
-                                <p class="prix">22€</p>
                             </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
-                            </div>
-                        </div>
-                        <div class="assiette assiette_3">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Millefeuille croustillant</h3>
-                                    <p>Myrtilles et pâte d’amande</p>
+                            <div class="assiette assiette_2">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Fondant au chocolat</h3>
+                                        <p>Revisité</p>
+                                    </div>
+                                    <p class="prix">22€</p>
                                 </div>
-                                <p class="prix">23€</p>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
+                                </div>
                             </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
+                            <div class="assiette assiette_3">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Millefeuille croustillant</h3>
+                                        <p>Myrtilles et pâte d’amande</p>
+                                    </div>
+                                    <p class="prix">23€</p>
+                                </div>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
