--- a/html/La palette du goût.html
+++ b/html/La palette du goût.html
@@ -28,120 +28,125 @@
                             <i class="fa-solid fa-heart plein"></i>
                         </div>
                     </div>
-                    <div id="entrees">
+                    <div>
                         <h2 class="repas">entrées</h2>
-                        <div class="assiette assiette_1">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Fricassée d'escargot</h3>
-                                    <p>Au piment d'Espelette</p>
+                        <div class="plats">
+                            <div class="assiette assiette_1">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Fricassée d'escargot</h3>
+                                        <p>Au piment d'Espelette</p>
+                                    </div>
+                                    <p class="prix">25€</p>
                                 </div>
-                                <p class="prix">25€</p>
-                            </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
-                            </div>
-                        </div>
-                        <div class="assiette assiette_2">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Foie gras de canard mi-cuit</h3>
-                                    <p>Et ses copeaux de truffe noire</p>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
                                 </div>
-                                <p class="prix">35€</p>
                             </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
-                            </div>
-                        </div>
-                        <div class="assiette assiette_3">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Œuf au plat</h3>
-                                    <p>Assaisonné à la truffe sur lit de caviar</p>
+                            <div class="assiette assiette_2">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Foie gras de canard mi-cuit</h3>
+                                        <p>Et ses copeaux de truffe noire</p>
+                                    </div>
+                                    <p class="prix">35€</p>
                                 </div>
-                                <p class="prix">20€</p>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
+                                </div>
                             </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
+                            <div class="assiette assiette_3">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Œuf au plat</h3>
+                                        <p>Assaisonné à la truffe sur lit de caviar</p>
+                                    </div>
+                                    <p class="prix">20€</p>
+                                </div>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div id="plats">
+                    <div>
                         <h2 class="repas">plats</h2>
-                        <div class="assiette assiette_1">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Filet de boeuf aux herbes</h3>
-                                    <p>Accompagné de sa ribambelle de légumes</p>
+                        <div class="plats">
+                            <div class="assiette assiette_1">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Filet de boeuf aux herbes</h3>
+                                        <p>Accompagné de sa ribambelle de légumes</p>
+                                    </div>
+                                    <p class="prix">40€</p>
                                 </div>
-                                <p class="prix">40€</p>
-                            </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
-                            </div>
-                        </div>
-                        <div class="assiette assiette_2">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Parmentier de queue de boeuf</h3>
-                                    <p>À la truffe noire sur sa purée de panais</p>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
                                 </div>
-                                <p class="prix">35€</p>
                             </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
-                            </div>
-                        </div>
-                        <div class="assiette assiette_3">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Filet de turbot</h3>
-                                    <p>Aux agrumes</p>
+                            <div class="assiette assiette_2">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Parmentier de queue de boeuf</h3>
+                                        <p>À la truffe noire sur sa purée de panais</p>
+                                    </div>
+                                    <p class="prix">35€</p>
                                 </div>
-                                <p class="prix">44€</p>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
+                                </div>
                             </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
+                            <div class="assiette assiette_3">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Filet de turbot</h3>
+                                        <p>Aux agrumes</p>
+                                    </div>
+                                    <p class="prix">44€</p>
+                                </div>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
+                                </div>
                             </div>
-                        </div>
                     </div>
-                    <div id="desserts">
+                    <div>
                         <h2 class="repas">desserts</h2>
-                        <div class="assiette assiette_1">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Paris-Brest</h3>
-                                    <p>Revisité</p>
+                        <div class="plats">
+                            <div class="assiette assiette_1">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Paris-Brest</h3>
+                                        <p>Revisité</p>
+                                    </div>
+                                    <p class="prix">18€</p>
                                 </div>
-                                <p class="prix">18€</p>
-                            </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
-                            </div>
-                        </div>
-                        <div class="assiette assiette_2">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Macaron au chocolat d'exception</h3>
-                                    <p>Et glace à la vanille de Madagascar</p>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
                                 </div>
-                                <p class="prix">22€</p>
                             </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
-                            </div>
-                        </div>
-                        <div class="assiette assiette_3">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Mousse au chocolat</h3>
-                                    <p>Au piment d'Espelette et à la truffe noire</p>
+                            <div class="assiette assiette_2">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Macaron au chocolat d'exception</h3>
+                                        <p>Et glace à la vanille de Madagascar</p>
+                                    </div>
+                                    <p class="prix">22€</p>
                                 </div>
-                                <p class="prix">23€</p>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
+                                </div>
                             </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
+                            <div class="assiette assiette_3">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Mousse au chocolat</h3>
+                                        <p>Au piment d'Espelette et à la truffe noire</p>
+                                    </div>
+                                    <p class="prix">23€</p>
+                                </div>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
