--- a/html/Le délice des sens.html
+++ b/html/Le délice des sens.html
@@ -28,120 +28,126 @@
                             <i class="fa-solid fa-heart plein"></i>
                         </div>
                     </div>
-                    <div id="entrees">
+                    <div>
                         <h2 class="repas">entrées</h2>
-                        <div class="assiette assiette_1">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Tartare de thon</h3>
-                                    <p>Assaisonné au yuzu</p>
+                        <div class="plats">
+                            <div class="assiette assiette_1">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Tartare de thon</h3>
+                                        <p>Assaisonné au yuzu</p>
+                                    </div>
+                                    <p class="prix">25€</p>
                                 </div>
-                                <p class="prix">25€</p>
-                            </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
-                            </div>
-                        </div>
-                        <div class="assiette assiette_2">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Bouchée de homard croustillant</h3>
-                                    <p>Et sa farandole de petits légumes</p>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
                                 </div>
-                                <p class="prix">35€</p>
                             </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
-                            </div>
-                        </div>
-                        <div class="assiette assiette_3">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Velouté de cèpes</h3>
-                                    <p>Aux truffes</p>
+                            <div class="assiette assiette_2">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Bouchée de homard croustillant</h3>
+                                        <p>Et sa farandole de petits légumes</p>
+                                    </div>
+                                    <p class="prix">35€</p>
                                 </div>
-                                <p class="prix">20€</p>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
+                                </div>
                             </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
+                            <div class="assiette assiette_3">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Velouté de cèpes</h3>
+                                        <p>Aux truffes</p>
+                                    </div>
+                                    <p class="prix">20€</p>
+                                </div>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div id="plats">
+                    <div>
                         <h2 class="repas">plats</h2>
-                        <div class="assiette assiette_1">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Poulet rôti aux herbes de Provence</h3>
-                                    <p>Et sa crème de truffe</p>
+                        <div class="plats">
+                            <div class="assiette assiette_1">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Poulet rôti aux herbes de Provence</h3>
+                                        <p>Et sa crème de truffe</p>
+                                    </div>
+                                    <p class="prix">40€</p>
                                 </div>
-                                <p class="prix">40€</p>
-                            </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
-                            </div>
-                        </div>
-                        <div class="assiette assiette_2">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Langouste rôtie</h3>
-                                    <p>Et ses légumes de saison</p>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
                                 </div>
-                                <p class="prix">35€</p>
                             </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
-                            </div>
-                        </div>
-                        <div class="assiette assiette_3">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Côte de boeuf Angus</h3>
-                                    <p>Et sa purée de panais</p>
+                            <div class="assiette assiette_2">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Langouste rôtie</h3>
+                                        <p>Et ses légumes de saison</p>
+                                    </div>
+                                    <p class="prix">35€</p>
                                 </div>
-                                <p class="prix">44€</p>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
+                                </div>
                             </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
+                            <div class="assiette assiette_3">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Côte de boeuf Angus</h3>
+                                        <p>Et sa purée de panais</p>
+                                    </div>
+                                    <p class="prix">44€</p>
+                                </div>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div id="desserts">
+                    <div>
                         <h2 class="repas">desserts</h2>
-                        <div class="assiette assiette_1">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Farandole de desserts</h3>
-                                    <p>Du chef</p>
+                        <div class="plats">
+                            <div class="assiette assiette_1">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Farandole de desserts</h3>
+                                        <p>Du chef</p>
+                                    </div>
+                                    <p class="prix">18€</p>
                                 </div>
-                                <p class="prix">18€</p>
-                            </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
-                            </div>
-                        </div>
-                        <div class="assiette assiette_2">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Crème brulée</h3>
-                                    <p>Revisitée</p>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
                                 </div>
-                                <p class="prix">22€</p>
                             </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
-                            </div>
-                        </div>
-                        <div class="assiette assiette_3">
-                            <div class="assiette_titre_description">
-                                <div class="assiette_description">
-                                    <h3>Tiramisu</h3>
-                                    <p>À la noisette</p>
+                            <div class="assiette assiette_2">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Crème brulée</h3>
+                                        <p>Revisitée</p>
+                                    </div>
+                                    <p class="prix">22€</p>
                                 </div>
-                                <p class="prix">23€</p>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
+                                </div>
                             </div>
-                            <div class="coche">
-                                <i class="fa-solid fa-check valider"></i>
+                            <div class="assiette assiette_3">
+                                <div class="assiette_titre_description">
+                                    <div class="assiette_description">
+                                        <h3>Tiramisu</h3>
+                                        <p>À la noisette</p>
+                                    </div>
+                                    <p class="prix">23€</p>
+                                </div>
+                                <div class="coche">
+                                    <i class="fa-solid fa-check valider"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
